@@ -15,16 +15,8 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-
 #ifndef __ParticleInterface_hpp__
 #define __ParticleInterface_hpp__
-
-
-#if _MSC_VER > 1000
-	#pragma once
-#endif
-
-
 
 #include "iXY.hpp"
 #include "iRect.hpp"
@@ -32,7 +24,6 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #include "ParticleSystemGlobals.hpp"
 #include "UnitTypes.hpp"
 #include "UnitState.hpp"
-
 
 class Surface;
 class PackedSurface;
