@@ -15,14 +15,11 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-
 #ifndef __WindParticle2D_hpp__
 #define __WindParticle2D_hpp__
 
-
 #include "Particle2D.hpp"
 #include "fXYZ.hpp"
-
 
 // WindParticle2D
 //--------------------------------------------------------------------------
@@ -35,7 +32,6 @@ public:
 	WindParticle2D(const fXYZ &pos, float windScale = 1.0f); // Used to increase or decrease wind. (Maybe depending on elevation.)
 
 	virtual void sim();
-
 }; // end WindParticle2D
 
 #endif // __WindParticle2D_hpp__
