@@ -1,3 +1,9 @@
+9-Sep-2003 by Matze Braun
+-worked around issues with the block allocator code for Particl2D (new operator
+ is overloaded, but laste C++ draft doesn't allow to return 0 from such an
+ overloaded new.) I added exceptions and lots of try {} catch{} blocks, let's
+ hope I didn't miss something.
+
 8-Sep-2003 by Matze Braun
 -added some basic music plying support (all files in sfx/music are played in
 		random order, so simply put some .mp3 or .ogg there)
